# plf-es-2025-2-tcci-0393100-dev-luis-vaz-e-lucas-lima

./: README.md  text.md
Artefatos/Diagramas/: Diagramas.asta
Artefatos/Diagramas/Diagrama de Arquitetura/: arquitetura.drawio
Artefatos/Diagramas/Diagrama de Componentes/: README.md
Artefatos/Diagramas/Diagrama de Comunicação/: Diagramas de Comunicação.drawio
Artefatos/Diagramas/Diagrama de Entidade Relacional/: Diagrama ER.mwb
Artefatos/Diagramas/Diagrama de Implantacao/: README.md
Artefatos/Documento de Viabilidade/: README.md
Artefatos/Memoriais/: Memorial Lucas Lima.md  Memorial-Luis-Vaz.md
Codigo/: Makefile  README.md  docker-compose.yml  nginx.conf  start.sh  stop.sh  test-api.sh
Codigo/backend/: .dockerignore  .gitignore  Dockerfile  README.md  buscar_backend.opam  dune-project
Codigo/backend/db/: schema.sql  seed.sh  seed.sql
Codigo/backend/lib/: api.ml  auth.ml  cache.ml  config.ml  database.ml  dune  mock_data.ml  repository.ml  simple_types.ml  swagger.ml  types.ml  vehicle_commands.ml
Codigo/backend/migrations/: 01_init.sql  02_sample_data.sql
Codigo/frontend/: .dockerignore  Dockerfile  README.md  buscar.opam  deploy.sh  docker-compose.yml  dune-project  nginx.conf  run.sh
Codigo/frontend/lib/: api_client.ml  dune  templates.ml  types.ml
